<resources>
    <string name="app_name">Copa Vale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starts">Starts</string>
    <string name="status">STATUS</string>
    <string name="about_this_championship">ABOUT THIS \nTORNAMENT</string>
    <string name="registration">REGISTRATION</string>
    <string name="registration_starts">REGISTRATION \nSTARTS</string>
    <string name="registration_ends">REGISTRATION \nENDS</string>
    <string name="registration_closed">REGISTRATION CLOSED</string>
    <string name="join_tournament">JOIN TOURNAMENT</string>
    <string name="loading_championships">Loading Championships</string>
    <string name="championships">CHAMPIONSHIPS</string>
    <string name="loading_data">Loading Data</string>
    <string name="upcoming">Upcoming</string>
    <string name="ongoing">Ongoing</string>
    <string name="past">Past</string>
    <string name="details">Details</string>
    <string name="upcoming_matches">Upcoming \nMatches</string>
    <string name="ongoing_matches">Ongoing \nMatches</string>
    <string name="results">Results</string>
    <string name="finished">Finished</string>
</resources>