<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.champs.ChampsDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1d"
    >

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="#1a1a1d"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/view_line_champs_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_status"
        android:layout_width="100dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:maxLines="2"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Started"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/text_status"
        app:layout_constraintStart_toEndOf="@id/text_status"
        app:layout_constraintBottom_toBottomOf="@id/text_status"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/view_line_champs_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_about_championship"
        android:layout_width="100dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/about_this_championship"
        android:maxLines="2"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintTop_toTopOf="@id/scroll_description_champ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/scroll_description_champ"
        />

    <ScrollView
        android:id="@+id/scroll_description_champ"
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_about_championship"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        >


    <TextView
        android:id="@+id/championship_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintStart_toEndOf="@id/tv_about_championship"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/view_line_champs_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_slots"
        android:layout_width="100dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:maxLines="2"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_slots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2 / 10"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintStart_toEndOf="@id/text_slots"
        app:layout_constraintTop_toTopOf="@id/text_slots"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/view_line_champs_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/text_subscription_start"
        android:layout_width="100dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/registration_starts"
        android:maxLines="2"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_subscription_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="27/10/2021 22:00"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/text_subscription_start"
        app:layout_constraintStart_toEndOf="@id/text_subscription_start"
        app:layout_constraintBottom_toBottomOf="@id/text_subscription_start"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/view_line_champs_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_subscription_ends"
        android:layout_width="100dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/registration_ends"
        android:maxLines="2"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_subscription_ends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="27/10/2021 22:00"
        android:textColor="@color/white"
        android:fontFamily="@font/play_bold"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/text_subscription_ends"
        app:layout_constraintStart_toEndOf="@id/text_subscription_ends"
        app:layout_constraintBottom_toBottomOf="@id/text_subscription_ends"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#757070"
        android:text="@string/registration_closed"
        android:fontFamily="@font/play_bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/detail_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
